# text-summarization-as-service

./: README.md  pyproject.toml  server.py
